Revert "hoan thanh menu"
This reverts commit d68168815a6e72f5565beb870530146baa346106.

--- a/templates/jsn_blank2/css/core/sections_1c383cd30b7c298ab50293adfecb7b18.css
+++ b/templates/jsn_blank2/css/core/sections_1c383cd30b7c298ab50293adfecb7b18.css
@@ -1,6 +1,9 @@
 #sunfw_section_component {
   background-color: custom;
 }
+#sunfw_section_header {
+  background-color: #243341;
+}
 #sunfw_section_breadcrumb {
   color: #fff;
   font-size: 14px;
